--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@hookform/resolvers": "^4.1.3",
     "@stripe/react-stripe-js": "github:stripe/react-stripe-js",
     "@stripe/stripe-js": "^6.0.0",
+    "@vercel/blob": "^0.27.3",
     "axios": "^1.8.3",
     "framer-motion": "^12.5.0",
     "leaflet": "^1.9.4",
