--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-hot-toast": "^2.5.2",
     "react-intersection-observer": "^9.16.0",
     "react-leaflet": "^5.0.0",
+    "tailwindcss-animate": "^1.0.7",
     "types": "^0.1.1",
     "zod": "^3.24.2",
     "zustand": "^5.0.3"
