--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^4.1.3",
+    "@react-google-maps/api": "^2.20.6",
     "@stripe/react-stripe-js": "github:stripe/react-stripe-js",
     "@stripe/stripe-js": "^6.0.0",
     "@vercel/blob": "^0.27.3",
