--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^4.1.3",
+    "@next/third-parties": "^15.2.4",
     "@react-google-maps/api": "^2.20.6",
     "@stripe/react-stripe-js": "github:stripe/react-stripe-js",
     "@stripe/stripe-js": "^6.0.0",
