Hamper Page Fix

--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@next/third-parties": "^15.2.4",
     "@radix-ui/react-label": "^2.1.4",
     "@radix-ui/react-select": "^2.2.2",
-    "@radix-ui/react-slot": "^1.2.0",
+    "@radix-ui/react-separator": "^1.1.6",
+    "@radix-ui/react-slot": "^1.2.2",
+    "@radix-ui/react-tabs": "^1.1.11",
     "@react-google-maps/api": "^2.20.6",
     "@stripe/react-stripe-js": "github:stripe/react-stripe-js",
     "@stripe/stripe-js": "^6.0.0",
